[package]
name = "smik-mobile-app-log-decrypt"
description = "Decrypt iOS logs"
license = "MIT"
repository = "https://github.com/PaulmannLighting/smik-mobile-app-log-decrypt"
keywords = ["Android", "iOS", "log", "decrypt"]
categories = ["command-line-utilities"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android-log-decrypt = { git = "https://github.com/PaulmannLighting/android-log-decrypt.git", version = "0.1.4" }
anyhow = "1.0.79"
clap = { version = "4.5.3", features = ["derive"] }
clap-stdin = "0.4.0"
env_logger = "0.11.3"
hex = "0.4.3"
ios-log-decrypt = { git = "https://github.com/PaulmannLighting/ios-log-decrypt.git", version = "0.1.4" }
rpassword = "7.3.1"
